--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <style>
-  .box{width:100px;height:100px;background:red;}
+  .box{width:100px;height:100px;background:red;border:1px solid red;}
 </style>
 </head>
 
